--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Welcome Back</h2>
             <p>Please login to manage your expenses</p>
             <form id="login-form">
-                <input type="email" id="email" placeholder="Email (admin@test.com)" required>
+                <input type="email" id="email" placeholder="Email (user@test.com)" required>
                 <input type="password" id="password" placeholder="Password (1234)" required>
                 <button type="submit" class="btn-primary">Login</button>
             </form>
